--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.log
-wp-config.php
+wp-admin/
 wp-content/advanced-cache.php
 wp-content/backup-db/
 wp-content/backups/
@@ -8,11 +8,14 @@ wp-content/cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
+wp-content/plugins/meta-box/
 wp-content/plugins/hello.php
+wp-content/themes/twentyseventeen
+wp-includes/
 
 /.htaccess
 /license.txt
 /readme.html
 /sitemap.xml
 /sitemap.xml.gz
-
+/*.php
